# shark

./: .editorconfig  .env.ci  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Pipfile  README.md  compilemessages.py  docker-compose.yml  docker-entrypoint.py  i18n.py  makemessages.sh  manage.py  pyproject.toml  requirements.txt  settings.py.example  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
container/: Dockerfile  Dockerfile.dockerignore
docker/: Dockerfile  Dockerfile.dockerignore  entrypoint.sh
shark/: __init__.py  admin_urls.py  api_urls.py  asgi.py  dashboard.py  settings.py  settings_base.py  settings_dev.py  storage.py  tests.py  urls.py  wsgi.py
shark/accounting/: models.py  urls.py  views.py
shark/auth/: admin.py  apps.py  middleware.py  models.py
shark/auth/migrations/: 0001_initial.py
shark/banking/: admin.py  models.py
shark/banking/migrations/: 0001_initial.py
shark/base/: models.py  views.py
shark/base/formats/de/: formats.py
shark/base/formats/en/: formats.py
shark/base/static_src/: package-lock.json  package.json  tailwind.config.js
shark/base/static_src/src/: styles.css
shark/base/templates/admin/: base_site.html
shark/base/templates/base/: index.html  site.html  topnav.html
shark/base/templates/base/includes/: card.html  grid-four-cols.html  grid-three-cols.html  grid-two-cols.html  js_parse_short_date.html
shark/billing/: admin.py  admin_forms.py  admin_urls.py  admin_views.py  api_serializers.py  api_urls.py  api_views.py  dashboard.py  models.py  tests.py
shark/billing/api/: serializers.py  urls.py  views.py
shark/billing/locale/de/LC_MESSAGES/: django.mo  django.po
shark/billing/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0003_meta_changes.py  0004_invoice_template.py  0005_remove_invoicetemplate_is_selected_and_more.py  0006_invoice_issue_date_alter_invoice_number.py
shark/billing/templates/admin/billing/: import_items.html
shark/billing/templates/admin/billing/dashboard/: unpaid-invoices.html
shark/billing/templates/admin/billing/invoice/: change_form.html
shark/billing/templates/billing/admin/: import_items.html
shark/billing/templates/billing/dashboard/: invoices.html  loose-items.html  unpaid-invoices.html
shark/billing/tests/: test_invoice_generation.py
shark/billing/utils/: fake_invoice.py  invoice_to_pdf.py
shark/customer/: admin.py  admin_urls.py  admin_views.py  api_serializers.py  autocomplete_light_registry.py  fields.py  models.py  tests.py
shark/customer/api/: serializers.py
shark/customer/locale/de/LC_MESSAGES/: django.mo  django.po
shark/customer/migrations/: 0001_initial.py  0002_extra_fields_and_customer_address.py  0002_initial.py  0003_customer_daily_rate.py  0003_extra_fields_and_customer_address.py
shark/documents/: admin.py  models.py  storage.py
shark/documents/migrations/: 0001_initial.py  0004_improve_document.py
shark/id_generators/: __init__.py  fields.py  models.py  relation_based.py  self_referential.py  utils.py
shark/id_generators/tests/: test_customer_year_n.py  test_initial_as_number.py  test_year_customer_n.py
shark/issue/: admin.py  models.py  urls.py  views.py
shark/issue/migrations/: 0001_initial.py
shark/issue/templates/issue/: issue_create.html
shark/locale/de/LC_MESSAGES/: django.mo  django.po
shark/project/: admin.py  dashboard.py  forms.py  models.py  urls.py  views.py
shark/project/api/: serializers.py  urls.py  views.py
shark/project/migrations/: 0001_initial.py  0002_initial.py  0003_project_daily_rate_task_daily_rate.py
shark/project/templates/admin/project/dashboard/: index.html
shark/project/templates/project/: index.html
shark/project/templates/project/partials/: daily-report-form.html  task-create.html  task-edit.html  task-list-entry.html
shark/sepa/: admin.py  admin_urls.py  admin_views.py  fields.py  models.py  sepaxml.py  utils.py
shark/sepa/management/commands/: import_dd_mandates.py
shark/sepa/migrations/: 0001_initial.py  0002_initial.py
shark/sepa/templates/sepa/: direct_debit.xml  pre_notification_email_body.txt  pre_notification_email_subject.txt
shark/tenant/: admin.py  middleware.py  models.py  urls.py  views.py
shark/tenant/migrations/: 0001_initial.py
shark/tenant/templates/tenant/: index.html  timesheet.html
shark/tenant/templates/tenant/partials/: calendar_fields.html  export_timesheet.html
shark/tenant/typst/: timesheet.py  timesheet.typ
shark/utils/: api.py  dataclass.py  dynamic_callable.py  fields.py  http.py  id_generators.py  importlib.py  int2base.py  rounding.py  settings.py  test_fields.py  tests.py  time.py
shark/utils/s3/management/: utils.py
shark/utils/s3/management/commands/: emptystatic.py  makebucket.py
(+2 files in other folders)
