[tool.poetry]
name = "shark"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Django based billing application"
repository = "https://github.com/bikeshedder/shark"
homepage = "https://github.com/bikeshedder/shark"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.7"
django-grappelli = "^4.0.1"
dinbrief = "^0.5.0"
django-taggit = "^5.0.1"
django-localflavor = "^4"
djangorestframework = "^3.15.2"
django-composite-field = "^2"
django-countries = "^7.6.1"
django-storages = "^1.14.4"
python-magic = "^0.4.27"
Wand = "^0.6.13"
PyPDF3 = "^1.0.6"
django-environ = "^0.11.2"
gunicorn = "^22"
boto3 = "^1.34.147"
psycopg = "^3.2.1"
django-tailwind = { extras = ["reload"], version = "^3.8.0" }
typst = "^0.11.1"
django-htmx = "^1.18.0"
heroicons = { extras = ["django"], version = "2.6.0" }
supercollect = "^1.0.55"
qrcode = "^7.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pre-commit = "^3.7.1"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["E", "W", "F", "DJ", "I", "N"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E501` (Line too long) in all migration files
"**/migrations/*" = ["E501", "I001"]

[tool.ruff.format]
line-ending = "lf"
exclude = ["**/migrations/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
