[project]
name = "shark"
version = "0.1.0"
authors = [{ name = "Michael P. Jung", email = "michael.jung@terreon.de" }]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Django based billing application"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.37.25",
    "click>=8.1.8",
    "dinbrief>=0.5.1",
    "django>=5.1.8",
    "django-composite-field>=2.0.1",
    "django-countries>=7.6.1",
    "django-environ>=0.12.0",
    "django-grappelli>=4.0.1",
    "django-htmx>=1.23.0",
    "django-localflavor>=4.0",
    "django-storages>=1.14.6",
    "django-taggit>=6.1.0",
    "django-tailwind[reload]>=3.9.0",
    "djangorestframework>=3.16.0",
    "heroicons>=2.11.0",
    "httpx>=0.28.1",
    "psycopg>=3.2.6",
    "pypdf3>=1.0.6",
    "qrcode>=8.0",
    "supercollect>=1.1.1",
    "typst>=0.13.2",
    "wand>=0.6.13",
]

[tool.setuptools]
packages = ["shark"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["E", "W", "F", "DJ", "I", "N"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E501` (Line too long) in all migration files
"**/migrations/*" = ["E501", "I001"]

[tool.ruff.format]
line-ending = "lf"
exclude = ["**/migrations/*"]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.2"]
